k8s/apps/adguard-home/templates/adguardhome-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    gethomepage.dev/description: Ad blocker and DNS server
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Network
    gethomepage.dev/icon: adguard-home.png
    gethomepage.dev/name: Adguard Home
    gethomepage.dev/pod-selector: ""
    kompose.cmd: kompose convert -c
    kompose.service.expose: guard.mdeleon.dev
    kompose.service.expose.tls-secret: adguard-tls-cert
    kompose.service.type: clusterip
    kompose.version: 1.31.2 (HEAD)
    kompose.volume.size: 4Gi
  creationTimestamp: null
  labels:
    io.kompose.service: adguardhome
  name: adguardhome
spec:
  ports:
    - name: "53"
      port: 53
      targetPort: 53
    - name: 53-udp
      port: 53
      protocol: UDP
      targetPort: 53
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: adguardhome
  type: ClusterIP
status:
  loadBalancer: {}
