k8s/apps/adguard-home/templates/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: adguardhome
spec:
  selector:
    app: adguard
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: http
    - protocol: TCP
      port: 53
      targetPort: 53
      name: dns-tcp
    - protocol: UDP
      port: 53
      targetPort: 53
      name: dns-udp
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http-plain
    - protocol: TCP
      port: 443
      targetPort: 443
      name: http-secure-tcp
    - protocol: UDP
      port: 443
      targetPort: 443
      name: http-secure-udp
  type: LoadBalancer
