k8s/apps/adguard-home/templates/adguardhome-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    gethomepage.dev/description: Ad blocker and DNS server
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Network
    gethomepage.dev/icon: adguard-home.png
    gethomepage.dev/name: Adguard Home
    gethomepage.dev/pod-selector: ""
    kompose.cmd: kompose convert --chart
    kompose.service.expose: guard.mdeleon.dev
    kompose.service.expose.tls-secret: adguard-tls-cert
    kompose.service.type: clusterip
    kompose.version: 1.31.2 (HEAD)
    kompose.volume.size: 4Gi
  creationTimestamp: null
  labels:
    io.kompose.service: adguardhome
  name: adguardhome
spec:
  rules:
    - host: guard.mdeleon.dev
      http:
        paths:
          - backend:
              service:
                name: adguardhome
                port:
                  number: 53
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - guard.mdeleon.dev
      secretName: adguard-tls-cert
status:
  loadBalancer: {}
