k8s/apps/adguard-home/templates/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguardhome
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    gethomepage.dev/description: Ad blocker and DNS server
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Network
    gethomepage.dev/icon: adguard-home.png
    gethomepage.dev/name: Adguard Home
    gethomepage.dev/pod-selector: ""
spec:
  rules:
    - host: guard.mdeleon.dev
      http:
        paths:
          - backend:
              service:
                name: adguardhome
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - guard.mdeleon.dev
      secretName: adguard-tls-cert
status:
  loadBalancer: {}
